--- a/jhu-data-science/developing_data_products/project/pitch_slideshow/slides.Rmd
+++ b/jhu-data-science/developing_data_products/project/pitch_slideshow/slides.Rmd
@@ -58,8 +58,13 @@ p
 
 I hope you enjoyed this presentation. Thank you, and stay healthy!
 
-(Please note: This slideshow is hosted on GitHub pages, but I am using a custom domain name. You can find the source here:
-https://github.com/tylerburleigh/tylerburleigh.github.io/tree/master/DDP/pitch_slideshow)
+This slideshow is hosted on GitHub pages. I am just using a custom domain name. 
+
+You can find the slideshow source code here:
+https://github.com/tylerburleigh/tylerburleigh.github.io/tree/master/DDP/pitch_slideshow
+
+The Shiny app source code is here:
+https://github.com/tylerburleigh/coursera_projects/tree/master/jhu-data-science/developing_data_products/project/macronutrient_nlp
 
 
 
